docs/7.58/md/abenabap_json_oo_reader_abexa.md
---
title: "JSON - Parsing"
description: |
  The example demonstrates the parsing of JSON data(https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenjson_oview.htm). Source Code  Public class definition CLASS cl_demo_json_oo_reader DEFINITION INHERITING FROM cl_demo_classrun PUBLIC CREATE PUBLIC. PUBLIC SECTION. METHODS main
version: "7.58"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_json_oo_reader_abexa.htm"
abapFile: "abenabap_json_oo_reader_abexa.htm"
keywords: ["loop", "do", "if", "case", "try", "catch", "method", "class", "data", "internal-table", "abenabap", "json", "reader", "abexa"]
---

* * *

AS ABAP Release 758, ©Copyright 2024 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_data_communication.htm) →  [ABAP and JSON](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_json.htm) →  [JSON - Examples](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_json_abexas.htm) → 

 [![](Mail.gif?object=Mail.gif "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback%20on%20ABAP%20Documentation&body=Document:%20JSON%20-%20Parsing%2C%20ABENABAP_JSON_OO_READER_ABEXA%2C%20758%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion%20for%20improvement:)

JSON - Parsing

The example demonstrates the parsing of [JSON data](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenjson_oview.htm).

Source Code   

\* Public class definition
CLASS cl\_demo\_json\_oo\_reader DEFINITION
  INHERITING FROM cl\_demo\_classrun
  PUBLIC
  CREATE PUBLIC.
  PUBLIC SECTION.
    METHODS main REDEFINITION.
ENDCLASS.
\* Public class implementation
CLASS cl\_demo\_json\_oo\_reader IMPLEMENTATION.
  METHOD main.
    out->begin\_section( \`JSON-Data\` ).
    FINAL(json) =
      cl\_abap\_conv\_codepage=>create\_out( )->convert(
     \`{\` &&
     \` "order":"4711",\` &&
     \` "head":{\` &&
     \`  "status":"confirmed",\` &&
     \`  "date":"07-19-2012"\` &&
     \` },\` &&
     \` "body":{\` &&
     \`  "item":{\` &&
     \`   "units":"2", "price":"17.00", "Part No.":"0110"\` &&
     \`  },\` &&
     \`  "item":{\` &&
     \`   "units":"1", "price":"10.50", "Part No.":"1609"\` &&
     \`  },\` &&
     \`  "item":{\` &&
     \`   "units":"5", "price":"12.30", "Part No.":"1710"\` &&
     \`  }\` &&
     \` }\` &&
     \`}\` ).
    out->write\_json( json ).
    out->next\_section( \`Parsed Nodes of the JSON-Data\` ).
    DATA: BEGIN OF node\_wa,
            node\_type TYPE string,
            prefix    TYPE string,
            name      TYPE string,
            nsuri     TYPE string,
            value     TYPE string,
            value\_raw TYPE xstring,
          END OF node\_wa,
          nodes LIKE TABLE OF node\_wa.
    FINAL(reader) = cl\_sxml\_string\_reader=>create( json ).
    FINAL(writer) =
      CAST if\_sxml\_writer( cl\_sxml\_string\_writer=>create( ) ).
    TRY.
        DO.
          CLEAR node\_wa.
          FINAL(node) = reader->read\_next\_node( ).
          IF node IS INITIAL.
            EXIT.
          ENDIF.
          writer->write\_node( node ).
          CASE node->type.
            WHEN if\_sxml\_node=>co\_nt\_element\_open.
              FINAL(open\_element) = CAST if\_sxml\_open\_element( node ).
              node\_wa-node\_type = \`open element\`.
              node\_wa-prefix    = open\_element->prefix.
              node\_wa-name      = open\_element->qname-name.
              node\_wa-nsuri     = open\_element->qname-namespace.
              FINAL(attributes)  = open\_element->get\_attributes( ).
              APPEND node\_wa TO nodes.
              LOOP AT attributes INTO FINAL(attribute).
                node\_wa-node\_type = \`attribute\`.
                node\_wa-prefix    = attribute->prefix.
                node\_wa-name      = attribute->qname-name.
                node\_wa-nsuri     = attribute->qname-namespace.
                IF attribute->value\_type = if\_sxml\_value=>co\_vt\_text.
                  node\_wa-value = attribute->get\_value( ).
                ELSEIF attribute->value\_type =
                                   if\_sxml\_value=>co\_vt\_raw.
                  node\_wa-value\_raw = attribute->get\_value\_raw( ).
                ENDIF.
                APPEND node\_wa TO nodes.
              ENDLOOP.
              CONTINUE.
            WHEN if\_sxml\_node=>co\_nt\_element\_close.
              FINAL(close\_element) = CAST if\_sxml\_close\_element( node ).
              node\_wa-node\_type   = \`close element\`.
              node\_wa-prefix      = close\_element->prefix.
              node\_wa-name        = close\_element->qname-name.
              node\_wa-nsuri       = close\_element->qname-namespace.
              APPEND node\_wa TO nodes.
              CONTINUE.
            WHEN if\_sxml\_node=>co\_nt\_value.
              FINAL(value\_node) = CAST if\_sxml\_value\_node( node ).
              node\_wa-node\_type   = \`value\`.
              IF value\_node->value\_type = if\_sxml\_value=>co\_vt\_text.
                node\_wa-value = value\_node->get\_value( ).
              ELSEIF value\_node->value\_type = if\_sxml\_value=>co\_vt\_raw.
                node\_wa-value\_raw = value\_node->get\_value\_raw( ).
              ENDIF.
              APPEND node\_wa TO nodes.
              CONTINUE.
            WHEN OTHERS.
              node\_wa-node\_type   = \`Error\`.
              APPEND node\_wa TO nodes.
              EXIT.
          ENDCASE.
        ENDDO.
      CATCH cx\_sxml\_parse\_error INTO FINAL(parse\_error).
        out->write\_text( parse\_error->get\_text( ) ).
    ENDTRY.
    out->write\_data( nodes ).
    out->next\_section(
      \`JSON-XML-Representation of the JSON-Data\` ).
    out->write\_xml(
      CAST cl\_sxml\_string\_writer( writer )->get\_output( ) ).
  ENDMETHOD.
ENDCLASS.

Description   

The string json is filled with valid JSON data, which is then displayed. The JSON data is parsed by a [JSON reader](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenjson_reader_glosry.htm "Glossary Entry"). The method used is the same as in the executable example [sXML Library, Object-Oriented Parsing](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abensxml_oo_parsing_abexa.htm). The information about the parsed nodes is appended to an internal table and then displayed.

Also, an XML string writer for the standard XML 1.0 is filled with the nodes. The output string is obtained and displayed. It demonstrates the [JSON-XML representation](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenjson_xml_glosry.htm "Glossary Entry") of the parsed JSON data.